# gemini

./: LICENSE  README.md  pyproject.toml
src/: image.py  main.py  pdf.py  text.py
src/gemini/: __init__.py
src/pages/: 01_text.py  02_image.py  03_pdf.py
