[project]
name = "gemini"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "smpiun", email = "ippotei.tsukemen@gmail.com" }
]
dependencies = [
    "streamlit>=1.29.0",
    "google>=3.0.0",
    "google.generativeai",
    "PyMuPDF>=1.23.9",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
